# practice-insightface

./: README.md  pyproject.toml
practice_insightface/: camera_preview.py  from_camera.py  from_jpg.py
