[tool.poetry]
name = "practice-insightface"
version = "0.1.0"
description = ""
authors = ["mkrydik <mkrydik@gmail.com>"]
readme = "README.md"
packages = [{include = "practice_insightface"}]

[tool.poetry.dependencies]
python = "^3.10"
cython = "^3.0.0"
onnxruntime = "^1.15.1"
insightface = "^0.7.3"
numpy = "<1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
